# iAgricultura

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  README.md  docker-compose.dev.yml  render.yaml
apps/api/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/docs/: ARCHITECTURE.md  PROJECT_MEMORY.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1eb8b0707945_add_cif_to_farms_table.py  a1b2c3d4e5f6_add_anaf_sync_log_table.py  b2c3d4e5f6a7_add_invoice_alerts_and_explanations.py  c3d4e5f6a7b8_add_users_and_farm_memberships.py  d4e5f6a7b8c9_add_product_embeddings_table.py  e5f6a7b8c9d0_add_transport_declarations.py  f6c1486c14e1_initial_schema.py  fd3136f80cc4_add_anaf_tokens_table.py
apps/api/scripts/: apply_migration.py  audit_db.py  audit_result.txt  final_report.py  final_report.txt  fix_invoices.py  fix_result.txt  reprocess_invoices.py  reprocess_result.txt  verify_api.py  verify_result.txt
apps/api/tests/: conftest.py  helpers.py  test_alert_persistence.py  test_anaf_tokens.py  test_auto_alias.py  test_comprehensive.py  test_contracts.py  test_hardening.py  test_seed_catalog.py
apps/api/tests/api/: test_anaf_routes.py  test_api_v1.py  test_auth.py  test_dashboard.py  test_health.py  test_invoice_list.py  test_stock.py
apps/api/tests/domain/: test_alert_derivation.py  test_benchmark_comparison.py  test_duplicate_suspicion.py  test_encryption.py  test_exact_normalization.py  test_explanation_derivation.py  test_fuzzy_suggestions.py  test_invoice_validation.py  test_line_classification.py  test_money.py  test_procurement_review.py  test_stock_in_derivation.py
apps/api/tests/fixtures/: efactura_sample.xml
apps/api/tests/integration/: test_normalization_integration.py  test_pipeline_integration.py  test_stock_in_integration.py
apps/api/tests/worker/: test_anaf_client.py  test_anaf_sync.py  test_circuit_breaker.py  test_efactura_parser.py  test_embedding_service.py  test_scheduler.py  (+2 more)
(+379 files in other folders)
