[project]
name = "farm-copilot"
version = "0.1.0"
description = "Procurement and margin intelligence assistant for Romanian crop farms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "lxml>=5.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0",
    "cryptography>=44.0",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/farm_copilot"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends() in defaults is the standard FastAPI pattern
"src/farm_copilot/api/routes/*.py" = ["B008"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live database (DATABASE_URL)",
]

# ---------------------------------------------------------------------------
# Pyright — strict type checking
# ---------------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
